[package]
name = "near-api"
version = "0.0.1"
edition = "2018"
homepage = "https://github.com/bicarus-labs/near-api-rs"
repository = "https://github.com/bicarus-labs/near-api-rs"
documentation = "https://docs.rs/near-api"
license = "MIT"
description = """
Rust implementation of Near API library that compatible with tokio.
"""
categories = ["api-bindings"]
keywords = ["jsonrpc", "near", "api", "rpc", "client", "tokio"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.12.0"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "~0.8", features = ["v4"] }
borsh = "0.9"
near-sdk = "3.1.0"
near-jsonrpc-primitives = { path = "deps/nearcore/chain/jsonrpc-primitives", version = "0.2.0" }
near-primitives = { path = "deps/nearcore/core/primitives", version = "0.1.0" }